fix change pass 6 ki tu, align icon slug

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -605,6 +605,10 @@ td img {
     pointer-events: none;
     left: 0px;
 }
+.icon-addon .slug {
+    position: absolute;
+    bottom: -3;
+}
 
 .icon-addon .right {
     pointer-events: auto;
